got the first draft working, now testing

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -1836,27 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([0, 1, 2, 3, 4, 5], dtype='int64')"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1865,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "afcb709a-dfa8-4945-ac36-28362d43e99e",
+       "ref": "89878cb0-2f76-41e6-a9ed-d1b8f815a91a",
        "rows": [
         [
          "0",
@@ -1952,7 +1932,266 @@
        "1     AAC                  [v3]                              [gene2]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge_bus_df_and_adata_var(bus_df, adata_var, vcrs_column_bus=\"vcrs_names\", vcrs_column_adata=\"vcrs_header\"):\n",
+    "    bus_df_columns_original = bus_df.columns.tolist()\n",
+    "    bus_df_columns_original.remove(vcrs_column_bus)\n",
+    "\n",
+    "    # Step 1: Explode\n",
+    "    exploded = bus_df.explode(vcrs_column_bus, ignore_index=True)\n",
+    "\n",
+    "    # Step 2: Add original row index for regrouping\n",
+    "    exploded['original_index'] = pd.Series(\n",
+    "        bus_df.index.repeat(bus_df[vcrs_column_bus].str.len())\n",
+    "    ).reset_index(drop=True)\n",
+    "\n",
+    "    # Step 3: Merge with adata_var\n",
+    "    merged = exploded.merge(\n",
+    "        adata_var,\n",
+    "        left_on=vcrs_column_bus,\n",
+    "        right_on=vcrs_column_adata,\n",
+    "        how='left'\n",
+    "    )\n",
+    "\n",
+    "    # Step 4: Group back by original row index\n",
+    "    result = (merged\n",
+    "            .groupby('original_index')\n",
+    "            .agg({\n",
+    "              **{col: \"first\" for col in merged.columns if col in bus_df_columns_original},\n",
+    "              **{col: list for col in merged.columns if col not in bus_df_columns_original}\n",
+    "            })\n",
+    "            .reset_index(drop=True)\n",
+    "            .drop(columns=['original_index', vcrs_column_adata], errors='ignore')\n",
+    "    )\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "bus_df_mutation = pd.DataFrame({\n",
+    "    'barcode': ['AAA', 'AAC'],\n",
+    "    'vcrs_names': [['v1', 'v2', 'v4', 'v5', 'v6'], ['v3']],\n",
+    "})\n",
+    "\n",
+    "adata_var = pd.DataFrame({\n",
+    "    'vcrs_id': ['v1', 'v2', 'v3', 'v4', 'v5', 'v6'],\n",
+    "    'gene_id': ['gene1', 'gene2', 'gene2', 'gene4', 'gene5', 'gene6'],\n",
+    "})\n",
+    "\n",
+    "merge_bus_df_and_adata_var(bus_df_mutation, adata_var, \"vcrs_names\", \"vcrs_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "barcode",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_names",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "gene_id",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "f9f31d5d-cc53-405f-810c-9bf2fcad18b6",
+       "rows": [
+        [
+         "0",
+         "AAA",
+         "['v1', 'v2', 'v4', 'v5', 'v6']",
+         "['gene1', 'gene2', 'gene4', 'gene5', 'gene6']"
+        ],
+        [
+         "1",
+         "AAC",
+         "['v3']",
+         "['gene2']"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>barcode</th>\n",
+       "      <th>vcrs_names</th>\n",
+       "      <th>gene_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAA</td>\n",
+       "      <td>[v1, v2, v4, v5, v6]</td>\n",
+       "      <td>[gene1, gene2, gene4, gene5, gene6]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAC</td>\n",
+       "      <td>[v3]</td>\n",
+       "      <td>[gene2]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  barcode            vcrs_names                              gene_id\n",
+       "0     AAA  [v1, v2, v4, v5, v6]  [gene1, gene2, gene4, gene5, gene6]\n",
+       "1     AAC                  [v3]                              [gene2]"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bus_df_mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "barcode",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_names",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "gene_id",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "eda68163-9105-4172-9751-48c79185f919",
+       "rows": [
+        [
+         "0",
+         "AAA",
+         "['v1', 'v2', 'v4', 'v5', 'v6']",
+         "['gene1', 'gene2', 'gene4', 'gene5', 'gene6']"
+        ],
+        [
+         "1",
+         "AAC",
+         "['v3']",
+         "['gene2']"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>barcode</th>\n",
+       "      <th>vcrs_names</th>\n",
+       "      <th>gene_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAA</td>\n",
+       "      <td>[v1, v2, v4, v5, v6]</td>\n",
+       "      <td>[gene1, gene2, gene4, gene5, gene6]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAC</td>\n",
+       "      <td>[v3]</td>\n",
+       "      <td>[gene2]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  barcode            vcrs_names                              gene_id\n",
+       "0     AAA  [v1, v2, v4, v5, v6]  [gene1, gene2, gene4, gene5, gene6]\n",
+       "1     AAC                  [v3]                              [gene2]"
+      ]
+     },
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,291 +2236,6 @@
     ")\n",
     "\n",
     "bus_df_mutation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "vcrs_names",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "gene_id",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "a7afcde8-1e1b-4c50-974d-372d1ecde177",
-       "rows": [
-        [
-         "0",
-         "['v1', 'v2']",
-         "['gene1', 'gene2']"
-        ],
-        [
-         "1",
-         "['v4', 'v5']",
-         "['gene4', 'gene5']"
-        ],
-        [
-         "2",
-         "['v6', 'v3']",
-         "['gene6', 'gene2']"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 3
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>vcrs_names</th>\n",
-       "      <th>gene_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[v1, v2]</td>\n",
-       "      <td>[gene1, gene2]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[v4, v5]</td>\n",
-       "      <td>[gene4, gene5]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[v6, v3]</td>\n",
-       "      <td>[gene6, gene2]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  vcrs_names         gene_id\n",
-       "0   [v1, v2]  [gene1, gene2]\n",
-       "1   [v4, v5]  [gene4, gene5]\n",
-       "2   [v6, v3]  [gene6, gene2]"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "barcode",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "vcrs_names",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "vcrs_id",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "gene_id",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "827947e2-d8e4-4d44-9a93-1b90c37b09ed",
-       "rows": [
-        [
-         "0",
-         "AAA",
-         "v1",
-         "v1",
-         "gene1"
-        ],
-        [
-         "1",
-         "AAA",
-         "v2",
-         "v2",
-         "gene2"
-        ],
-        [
-         "2",
-         "AAA",
-         "v4",
-         "v4",
-         "gene4"
-        ],
-        [
-         "3",
-         "AAA",
-         "v5",
-         "v5",
-         "gene5"
-        ],
-        [
-         "4",
-         "AAA",
-         "v6",
-         "v6",
-         "gene6"
-        ],
-        [
-         "5",
-         "AAC",
-         "v3",
-         "v3",
-         "gene2"
-        ]
-       ],
-       "shape": {
-        "columns": 4,
-        "rows": 6
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>barcode</th>\n",
-       "      <th>vcrs_names</th>\n",
-       "      <th>vcrs_id</th>\n",
-       "      <th>gene_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AAA</td>\n",
-       "      <td>v1</td>\n",
-       "      <td>v1</td>\n",
-       "      <td>gene1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAA</td>\n",
-       "      <td>v2</td>\n",
-       "      <td>v2</td>\n",
-       "      <td>gene2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAA</td>\n",
-       "      <td>v4</td>\n",
-       "      <td>v4</td>\n",
-       "      <td>gene4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAA</td>\n",
-       "      <td>v5</td>\n",
-       "      <td>v5</td>\n",
-       "      <td>gene5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAA</td>\n",
-       "      <td>v6</td>\n",
-       "      <td>v6</td>\n",
-       "      <td>gene6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AAC</td>\n",
-       "      <td>v3</td>\n",
-       "      <td>v3</td>\n",
-       "      <td>gene2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  barcode vcrs_names vcrs_id gene_id\n",
-       "0     AAA         v1      v1   gene1\n",
-       "1     AAA         v2      v2   gene2\n",
-       "2     AAA         v4      v4   gene4\n",
-       "3     AAA         v5      v5   gene5\n",
-       "4     AAA         v6      v6   gene6\n",
-       "5     AAC         v3      v3   gene2"
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged"
    ]
   }
  ],
