finally got it back to the test that was failing before - it now supports (1) var_id_column from vk ref/build, (2) semicolon-merged headers, and (3) non-transcriptome source of headers

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0a7bae84-4720-48f0-aced-4d77f686137e",
+       "ref": "1a9bb253-bd57-4610-83e3-6593c5ec2356",
        "rows": [
         [
          "0",
@@ -1046,7 +1046,7 @@
        "1  GeneB        VAR3          99"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a5fecbb0-55d0-44d5-9b5a-e34ac345c51a",
+       "ref": "3944f331-2d3a-4a45-a6fc-d242bc1bf6f6",
        "rows": [
         [
          "0",
@@ -1172,7 +1172,7 @@
        "1  GeneB        VAR3          99                 [VAR3]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1216,35 +1216,43 @@
          "name": "vcrs_header_individual",
          "rawType": "object",
          "type": "string"
+        },
+        {
+         "name": "new",
+         "rawType": "int64",
+         "type": "integer"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7943ce14-7169-4dac-a986-896cf4f764f9",
+       "ref": "e4ad5599-665d-4a18-9f5c-f6305824162f",
        "rows": [
         [
          "0",
          "GeneA",
          "VAR1;VAR2",
          "42",
-         "VAR1"
+         "VAR1",
+         "1"
         ],
         [
          "0",
          "GeneA",
          "VAR1;VAR2",
          "42",
-         "VAR2"
+         "VAR2",
+         "2"
         ],
         [
          "1",
          "GeneB",
          "VAR3",
          "99",
-         "VAR3"
+         "VAR3",
+         "3"
         ]
        ],
        "shape": {
-        "columns": 4,
+        "columns": 5,
         "rows": 3
        }
       },
@@ -1271,6 +1279,7 @@
        "      <th>vcrs_header</th>\n",
        "      <th>other_info</th>\n",
        "      <th>vcrs_header_individual</th>\n",
+       "      <th>new</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1280,6 +1289,7 @@
        "      <td>VAR1;VAR2</td>\n",
        "      <td>42</td>\n",
        "      <td>VAR1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1287,6 +1297,7 @@
        "      <td>VAR1;VAR2</td>\n",
        "      <td>42</td>\n",
        "      <td>VAR2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1294,31 +1305,33 @@
        "      <td>VAR3</td>\n",
        "      <td>99</td>\n",
        "      <td>VAR3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gene vcrs_header  other_info vcrs_header_individual\n",
-       "0  GeneA   VAR1;VAR2          42                   VAR1\n",
-       "0  GeneA   VAR1;VAR2          42                   VAR2\n",
-       "1  GeneB        VAR3          99                   VAR3"
+       "    gene vcrs_header  other_info vcrs_header_individual  new\n",
+       "0  GeneA   VAR1;VAR2          42                   VAR1    1\n",
+       "0  GeneA   VAR1;VAR2          42                   VAR2    2\n",
+       "1  GeneB        VAR3          99                   VAR3    3"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "exploded = exploded.explode('vcrs_header_individual')\n",
+    "exploded[\"new\"] = [1, 2, 3]\n",
     "exploded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1346,19 +1359,25 @@
          "type": "integer"
         },
         {
+         "name": "new",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
          "name": "vcrs_header_list",
          "rawType": "object",
          "type": "string"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a2fea479-7ff7-407b-a153-bfd7e98e8428",
+       "ref": "b560592d-1d9d-4243-b235-a7bde60f08db",
        "rows": [
         [
          "0",
          "VAR1;VAR2",
          "GeneA",
          "42",
+         "[1, 2]",
          "['VAR1', 'VAR2']"
         ],
         [
@@ -1366,11 +1385,12 @@
          "VAR3",
          "GeneB",
          "99",
+         "[3]",
          "['VAR3']"
         ]
        ],
        "shape": {
-        "columns": 4,
+        "columns": 5,
         "rows": 2
        }
       },
@@ -1396,6 +1416,7 @@
        "      <th>vcrs_header</th>\n",
        "      <th>gene</th>\n",
        "      <th>other_info</th>\n",
+       "      <th>new</th>\n",
        "      <th>vcrs_header_list</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1405,6 +1426,7 @@
        "      <td>VAR1;VAR2</td>\n",
        "      <td>GeneA</td>\n",
        "      <td>42</td>\n",
+       "      <td>[1, 2]</td>\n",
        "      <td>[VAR1, VAR2]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1412,6 +1434,7 @@
        "      <td>VAR3</td>\n",
        "      <td>GeneB</td>\n",
        "      <td>99</td>\n",
+       "      <td>[3]</td>\n",
        "      <td>[VAR3]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1419,12 +1442,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  vcrs_header   gene  other_info vcrs_header_list\n",
-       "0   VAR1;VAR2  GeneA          42     [VAR1, VAR2]\n",
-       "1        VAR3  GeneB          99           [VAR3]"
+       "  vcrs_header   gene  other_info     new vcrs_header_list\n",
+       "0   VAR1;VAR2  GeneA          42  [1, 2]     [VAR1, VAR2]\n",
+       "1        VAR3  GeneB          99     [3]           [VAR3]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1455,10 @@
    "source": [
     "grouped = (\n",
     "    exploded.groupby(\"vcrs_header\", as_index=False)\n",
-    "    .agg({**{col: \"first\" for col in exploded.columns if col not in [\"vcrs_header\"]}})\n",
+    "    .agg({\n",
+    "        **{col: \"first\" for col in exploded.columns if col not in [\"vcrs_header\", \"new\"]},\n",
+    "        **{col: list for col in exploded.columns if col in [\"new\"]},\n",
+    "        })\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "grouped['vcrs_header_list'] = grouped['vcrs_header'].str.split(';')\n",
@@ -2236,6 +2262,267 @@
     ")\n",
     "\n",
     "bus_df_mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_names",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "vcrs_header_individual",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "fc0b1c94-d20b-4b05-bac8-6f6d3e6abc12",
+       "rows": [
+        [
+         "0",
+         "v3",
+         "['v3']"
+        ],
+        [
+         "1",
+         "v1;v2;v4",
+         "['v1', 'v2', 'v4']"
+        ],
+        [
+         "2",
+         "v3",
+         "['v3']"
+        ],
+        [
+         "3",
+         "v3",
+         "['v3']"
+        ],
+        [
+         "4",
+         "v3",
+         "['v3']"
+        ],
+        [
+         "5",
+         "v1;v2;v4",
+         "['v1', 'v2', 'v4']"
+        ],
+        [
+         "6",
+         "v3",
+         "['v3']"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 7
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vcrs_names</th>\n",
+       "      <th>vcrs_header_individual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>v3</td>\n",
+       "      <td>[v3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>v1;v2;v4</td>\n",
+       "      <td>[v1, v2, v4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>v3</td>\n",
+       "      <td>[v3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>v3</td>\n",
+       "      <td>[v3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>v3</td>\n",
+       "      <td>[v3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>v1;v2;v4</td>\n",
+       "      <td>[v1, v2, v4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>v3</td>\n",
+       "      <td>[v3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  vcrs_names vcrs_header_individual\n",
+       "0         v3                   [v3]\n",
+       "1   v1;v2;v4           [v1, v2, v4]\n",
+       "2         v3                   [v3]\n",
+       "3         v3                   [v3]\n",
+       "4         v3                   [v3]\n",
+       "5   v1;v2;v4           [v1, v2, v4]\n",
+       "6         v3                   [v3]"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'vcrs_names': ['v3', 'v1;v2;v4', 'v3', 'v3', 'v3', 'v1;v2;v4', 'v3'],\n",
+    "})\n",
+    "df['vcrs_header_individual'] = df['vcrs_names'].str.split(';')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "vcrs_header_individual",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "94f59e50-58b3-4c6f-b652-09e71c7c82a4",
+       "rows": [
+        [
+         "0",
+         "v3"
+        ],
+        [
+         "1",
+         "v1"
+        ],
+        [
+         "2",
+         "v2"
+        ],
+        [
+         "3",
+         "v4"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vcrs_header_individual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>v3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>v1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>v2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>v4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  vcrs_header_individual\n",
+       "0                     v3\n",
+       "1                     v1\n",
+       "2                     v2\n",
+       "3                     v4"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"vcrs_header_individual\"]].copy().explode('vcrs_header_individual', ignore_index=True).drop_duplicates()"
    ]
   }
  ],
