normal genome function fully working

--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -3637,7 +3637,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import anndata as ad\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "obs_dtypes = {col: str(dtype) for col, dtype in adata.obs.dtypes.items()}\n",
+    "var_dtypes = {col: str(dtype) for col, dtype in adata.var.dtypes.items()}\n",
+    "\n",
+    "with open(\"adata_dtypes.json\", \"w\") as f:\n",
+    "    json.dump({\"obs\": obs_dtypes, \"var\": var_dtypes}, f, indent=2)\n"
+   ]
   }
  ],
  "metadata": {
