making small bug fixes as I run real datasets through

--- a/tmp.ipynb
+++ b/tmp.ipynb
@@ -2,6 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'most_severe_consequence': 'intron_variant',\n",
+       "  'id': 'rs183890475',\n",
+       "  'seq_region_name': '1',\n",
+       "  'assembly_name': 'GRCh37',\n",
+       "  'allele_string': 'A/C/G',\n",
+       "  'input': 'rs183890475',\n",
+       "  'end': 819405,\n",
+       "  'strand': 1,\n",
+       "  'colocated_variants': [{'strand': 1,\n",
+       "    'start': 819405,\n",
+       "    'allele_string': 'A/C/G',\n",
+       "    'end': 819405,\n",
+       "    'seq_region_name': '1',\n",
+       "    'frequencies': {'C': {'gnomadg_fin': 0,\n",
+       "      'eur': 0,\n",
+       "      'eas': 0,\n",
+       "      'gnomadg_amr': 0.0003921,\n",
+       "      'gnomadg_afr': 0.001516,\n",
+       "      'gnomadg': 0.0004531,\n",
+       "      'gnomadg_mid': 0,\n",
+       "      'gnomadg_nfe': 0,\n",
+       "      'gnomadg_sas': 0,\n",
+       "      'gnomadg_eas': 0,\n",
+       "      'afr': 0.0023,\n",
+       "      'sas': 0,\n",
+       "      'gnomadg_asj': 0,\n",
+       "      'gnomadg_ami': 0,\n",
+       "      'af': 0.0008,\n",
+       "      'gnomadg_remaining': 0,\n",
+       "      'amr': 0.0014}},\n",
+       "    'id': 'rs183890475'}],\n",
+       "  'start': 819405,\n",
+       "  'transcript_consequences': [{'consequence_terms': ['intron_variant'],\n",
+       "    'gene_symbol_source': 'Clone_based_ensembl_gene',\n",
+       "    'impact': 'MODIFIER',\n",
+       "    'hgvsc': 'ENST00000594233.1:c.17-91A>C',\n",
+       "    'strand': 1,\n",
+       "    'gene_symbol': 'AL645608.2',\n",
+       "    'biotype': 'protein_coding',\n",
+       "    'transcript_id': 'ENST00000594233',\n",
+       "    'variant_allele': 'C',\n",
+       "    'gene_id': 'ENSG00000269308'},\n",
+       "   {'gene_id': 'ENSG00000269308',\n",
+       "    'variant_allele': 'G',\n",
+       "    'biotype': 'protein_coding',\n",
+       "    'transcript_id': 'ENST00000594233',\n",
+       "    'gene_symbol': 'AL645608.2',\n",
+       "    'strand': 1,\n",
+       "    'hgvsc': 'ENST00000594233.1:c.17-91A>G',\n",
+       "    'impact': 'MODIFIER',\n",
+       "    'gene_symbol_source': 'Clone_based_ensembl_gene',\n",
+       "    'consequence_terms': ['intron_variant']}]}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "dbsnp_id = \"rs183890475\"\n",
+    "\n",
+    "headers = {\"Content-Type\": \"application/json\"}\n",
+    "url = \"https://grch37.rest.ensembl.org/vep/human/id\"\n",
+    "url_single = f\"{url}/{dbsnp_id}?hgvs=1\"\n",
+    "response = requests.get(url_single, headers=headers)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
